# Pulsar-Engine

./: .gitignore  Cargo.toml  README.md  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  test.z  tsconfig.json
diagrams/: engine_build_pipeline.drawio
public/diagram-editor/js/cryptojs/: index.html
public/diagram-editor/js/deflate/: index.html
public/diagram-editor/js/freehand/: index.html
public/diagram-editor/js/rough/: index.html
public/diagram-editor/math/: index.html
public/diagram-editor/resources/: index.html
public/diagram-editor/styles/: grapheditor.css
public/nodes/: arithmetic.yaml  control_flow.yaml  functions.yaml  types.yaml  variables.yaml
public/workers/: baseEditorWorker.ts
sample-files/models/skeletal-mesh/: test-skeleton.json
src/: main.rs  ui.rs
src-tauri/: Cargo.toml  first_frame.txt  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  renderer.rs
src-tauri/src/renderer/: mod.rs
src-tauri/src/viewport/: mod.rs  renderer.rs  state.rs  vulkan.rs
src/components/: AlertDialog.jsx  Dialog.jsx  FileExplorer.tsx  LevelEditor.tsx  Menubar.jsx  SceneHierarchy.jsx  ScriptEditor.jsx  ScriptEditor.tsx  ScrollArea.tsx  SettingsUI.jsx  Terminal.tsx  Titlebar.jsx  alert.jsx  context-menu.jsx  types.ts
src/components/BPEdit/: Canvas.tsx  ConnectionLines.jsx  NavigationControls.jsx  NavigationControls.tsx  Node.jsx  PropertiesPanel.jsx  TitleBar.jsx  TitleBar.tsx  context-menu.tsx  page.jsx  page.tsx
src/components/BPEdit/components/ui/: Button.jsx  DropdownMenu.jsx  Select.tsx
src/components/DockablePanel/: DockablePanel.tsx  PanelButton.jsx  PanelButton.tsx  PanelManager.jsx  PanelManager.tsx  index.tsx  types.ts
src/components/Settings/: SettingsControl.jsx  SettingsDialog.jsx  SettingsSection.jsx  Sidebar.jsx  page.jsx
src/components/editors/: AnimationEditor.jsx  BehaviorTree.tsx  FoliageEditor.jsx  MaterialEditor.jsx  NavMeshEditor.jsx  ParticleEditor.jsx  PhysicsDebug.jsx  PrefabEditor.jsx  SkeletonEditor.jsx  SoundEditor.jsx  TerrainEditor.jsx  UIEditor.jsx
src/components/editors/Animation/: page.jsx
src/components/editors/BehaviorTree/: page.tsx
src/components/editors/Blueprint/: gen.nodes.sh  page.tsx  types.ts
src/components/editors/Blueprint/components/: BlueprintEditor.tsx  Editor.tsx  NodeDetailsPanel.tsx  NodeLibrary.tsx  PropertiesPanel.tsx  PulsarNode.tsx  UnrealNode.tsx
src/components/editors/Blueprint/context/: NodeEditorContext.tsx
src/components/editors/Blueprint/hooks/: useNodeEditor.ts
src/components/editors/Blueprint/lib/: generateRust.ts  utils.ts
src/components/editors/Blueprint/store/: nodeStore.ts
src/components/editors/Diagram/: page.jsx
src/components/editors/Foliage/: page.jsx
src/components/editors/Level/: PropertiesPanel.jsx  Viewport.tsx  page.tsx  webgpu.worker.ts
src/components/editors/Material/: page.jsx
src/components/editors/NavMesh/: page.jsx
src/components/editors/Particle/: page.jsx
src/components/editors/Physics/: page.jsx
src/components/editors/Prefab/: page.jsx
src/components/editors/Script/: page.jsx
src/components/editors/Skeleton/: page.jsx
src/components/editors/Sound/: page.jsx
src/components/editors/Terrain/: page.jsx
src/components/editors/UI/: page.jsx
src/components/editors/UI/types/: UIElement.ts
src/components/panels/: Console.jsx  PropertiesPanel.jsx  Terminal.tsx  Viewport.jsx  Viewport.tsx
src/components/shared/: Accordion.tsx  Card.tsx  ContextMenu.jsx  FileExplorer.tsx  ScrollArea.tsx  Select.tsx  Separator.tsx  Slider.tsx  Switch.tsx  Tooltip.jsx
src/config/: settings.json
src/hooks/: useDraggablePanel.ts
src/lib/: bufferManager.js
src/pages/: EditorTabs.tsx  StatusBar.jsx  index.jsx  index.tsx
src/styles/: globals.css
src/ui/: mod.rs
src/utils/: fileUtils.js
ui/: app-launcher-window copy.slint  theme.slint
(+32 files in other folders)
