[package]
name = "pulsar-engine"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "pulsar-engine"
edition = "2021"
rust-version = "1.66"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
tauri = { version = "1.8", features = ["api-all"] }
walkdir = "2.5.0"
base64 = "0.22.1"
tron = "1.0.0"
parking_lot = "0.12.3"
log = "0.4.25"
env_logger = "0.11.6"
anyhow = "1.0.95"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
crossbeam-channel = "0.5.6"
raw-window-handle = "0.6.2"
tao = "0.16.10"
wgpu = "24.0.1" # Using an older compatible version
gpu-allocator = "=0.27" # Pin to a specific version
windows = "0.59.0" # Pin Windows dependencies to consistent version
windows-sys = "0.59.0"
windows-core = "0.59.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.59", features = ["Win32_Foundation"] }

